kubeflow-azimuth/kubeflow-azimuth-chart/templates/admission-webhook-mutating-webhook-configuration-594.yml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: kubeflow/admission-webhook-cert
  labels:
    app: poddefaults
    app.kubernetes.io/component: poddefaults
    app.kubernetes.io/name: poddefaults
    kustomize.component: poddefaults
    managed-by: kubeflow-azimuth-app
  name: admission-webhook-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  - v1
  clientConfig:
    caBundle: ""
    service:
      name: admission-webhook-service
      namespace: kubeflow
      path: /apply-poddefault
  failurePolicy: Fail
  name: admission-webhook-deployment.kubeflow.org
  namespaceSelector:
    matchLabels:
      app.kubernetes.io/part-of: kubeflow-profile
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  sideEffects: None
